# muster

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  Cargo.toml  Justfile  LICENSE-MIT  PLAN.md  README.md  SPEC-v1.md  SPEC-v2.md  SPEC.md  ckeletin-project.toml  conformance-mapping.toml  conformance-report.json  deny.toml  lefthook.yml  rust-toolchain.toml
.ckeletin/: CHANGELOG.md  Justfile
.ckeletin/configs/: gitleaks.toml
.ckeletin/conform/: Cargo.toml
.ckeletin/conform/src/: main.rs
.ckeletin/crate/: Cargo.toml
.ckeletin/crate/src/: build_info.rs  catalog.rs  config.rs  lib.rs  logging.rs  output.rs  process.rs  project_config.rs  scaffold_scan.rs
.ckeletin/crate/tests/: arch_allowlist.rs  conform_guard.rs  consumer_layout_fixtures.rs  doctor.rs  framework_purity.rs  health.rs  init_smoke.rs  logging_init.rs  logging_permissions.rs  scaffold_leftover_guard.rs  update_guard.rs  update_mechanism.rs  version_sync.rs  violation_drift_guard.rs
.ckeletin/scripts/: init.sh
.ckeletin/tests/violations/: domain_imports_clap.rs  domain_imports_tracing.rs  infra_imports_clap.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  spec-drift.yml
.omc/plans/: open-questions.md
.workhorse/: metrics.jsonl
.workhorse/phases/muster-20260617T055323Z/: 01-critic.md  01-planner.md  02-critic.md  02-planner.md
acceptance/: gate.sh  roundtrip.sh
conformance/: requirements.json
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: apply.rs  catalog.rs  control.rs  explain.rs  import.rs  incident.rs  init.rs  main.rs  nonconformity.rs  ping.rs  process.rs  readiness.rs  resolve.rs  root.rs  state.rs  store.rs  version.rs  view.rs
crates/cli/tests/: cli.rs  license_integrity.rs  muster.rs  roundtrip.rs
crates/domain/: Cargo.toml
crates/domain/src/: document.rs  lib.rs  model.rs  ping.rs  readiness.rs  reference.rs  store.rs
crates/domain/tests/: architecture_violations.rs  fuzz_ping.rs
crates/domain/tests/violations/: domain_imports_ckeletin.rs  domain_imports_ckeletin.stderr  domain_imports_clap.stderr  domain_imports_figment.rs  domain_imports_figment.stderr  domain_imports_infrastructure.rs  domain_imports_infrastructure.stderr  domain_imports_tracing.stderr
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  resolver.rs
crates/infrastructure/tests/: architecture_violations.rs
crates/infrastructure/tests/violations/: infra_imports_clap.stderr  infra_imports_domain.rs  infra_imports_domain.stderr
docs/: code-review-2026-06-09.md  consumer-feedback-2026-06-10.md  spec-feedback-2026-05.md  spec-feedback-2026-06.md
docs/plans/: 2026-04-14-framework-update-mechanism.md
docs/specs/: 2026-04-14-framework-update-mechanism.md
examples/audit/: README.md  ci-check.sh  setup-audit.sh
examples/audit/checks/: secrets_scan.sh
examples/audit/evidence/: access-review.json  backup-drill.json  coverage.json
examples/ckeletin-feedback/: README.md  ci-check.sh  feedback-register.json  setup-muster.sh
examples/ckeletin-feedback/checks/: decisions_recorded.sh  no_open_feedback.sh
examples/ckeletin-feedback/consumers/muster/: conformance-report.json
examples/ckeletin-feedback/consumers/workhorse/: conformance-report.json
