[package]
name = "ckeletin"
version = "0.2.27"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lints.clippy]
# OUT-005: Framework crate MUST NOT write to stdout or stderr — all output through Output.
# Writer injection (Output takes &mut dyn Write) is the prescribed pattern.
# This lint fires at `cargo clippy` time, making the enforcement level "linter".
# Exception: test files that emit skip-signal eprintln! carry a per-file
# #![allow(clippy::print_stderr)] with justification (not library output — test harness
# communication). See .ckeletin/crate/tests/{conform_guard,doctor,health,...}.rs.
print_stdout = "deny"
print_stderr = "deny"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
figment = { version = "0.10", features = ["test"] }
toml = "1"
