[package]
# Package == binary == repo name so `cargo install --git <url> muster` and
# (once published) `cargo install muster` resolve unambiguously. The crate still
# lives at crates/cli/ (the layer's role); only the published package id is `muster`.
name = "muster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "muster"
path = "src/main.rs"

# CLI crate: the ONLY crate that depends on both domain and infrastructure.
# This is where directed dependencies converge (CKSPEC-ARCH-002).
[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
